# t-fdp

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
src/tfdp/: tfdp.py
src/tfdp/bh_tforce/: bh_tforce.pyx
src/tfdp/simulation/: BH.py  Exact.py  RVS.py  ibFFT_CPU.py  ibFFT_GPU.py
