[project]
name = "tfdp"
version = "0.1.0"
dependencies = [
    "cython>=3.0.11",
    "numba-kdtree>=0.4.0",
    "pyfftw>=0.15.0",
    "scikit-learn>=1.6.0",
    "setuptools>=75.6.0",
    "torch>=2.5.1",
]

[build-system]
requires = [
    "cython>=3.0.11",
    "setuptools>=75.6.0",
    "scikit-learn>=1.6.0",
    "numpy>=1.15.0",
    "wheel",
]
build-backend = "setuptools.build_meta"


# [tool.setuptools]
# ext-modules = [
#   {name = "tfdp", sources = ["src/tfdp/bh_tforce/bh_tforce.pyx"]}
# ]
